Small changes in AndroidManifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TheRoad" />
-        <activity android:name=".ChooseWorld"></activity>
+        <activity android:name=".ChooseWorld" />
     </application>
 
 </manifest>
