the road quest 1 added to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".TheRoad" />
+        <activity android:name=".TheRoadQuest1" />
         <activity android:name=".ChooseWorld" />
-        <activity android:name=".FragmentQuestDescription" />
         <activity android:name=".Character"></activity>
     </application>
 
