--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".Character" />
         <activity android:name=".QuestActivity" />
         <activity android:name=".TaskActivity" />
+        <activity android:name=".TheRoadStory" />
+        <activity android:name=".ItemReward"></activity>
     </application>
 
 </manifest>
