--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".QuestActivity" />
         <activity android:name=".TaskActivity" />
         <activity android:name=".TheRoadStory" />
-        <activity android:name=".ItemReward"></activity>
+        <activity android:name=".ItemReward" />
+        <activity android:name=".NormalReward"></activity>
     </application>
 
 </manifest>
